# mind

./: .gitignore  .gitmodules  README.md  config.json  docker-compose.yml  inspect_new_data.ipynb  pipx install uv  pyproject.toml  requirements.txt  run_pipeline.py  test.md  test.py  tests_translate.py  train_htm_multi.py  train_model.py  train_model_filtered.py  translation_array.sh
ablation/qa/: get_figures.ipynb  (+1 more)
active_learning/: blade.py  blade_results_first_iter.ipynb  doc_selector.py  multi_blade_read_eval_results-third_iter.ipynb  multi_blade_test.ipynb  words.txt
app/: .gitignore  README.md
auth/: Dockerfile  requirements.txt
aux_scripts/: clear_cache.py  cohr.py  lang_identification.py  select_model_for_filtering.py  train_hdp.py
backend/: Dockerfile  dataset.py  main.py
bash_scripts/: clean_cache.sh  generate_tables.sh  run_en_de.sh  run_retrieval.sh  run_rosie.sh  run_rosie2.sh  run_rosie_examples.sh  test.sh  wget_mallet.sh
climate_fever/: build_corpus.py  generate_final_corpus.py  index_elastic.py  reading_contrds.ipynb  readme.md  run_fever.py  train_fever.py  transform_climate_fever_old.txt  wiki_xml_to_json.py
config/: config.yaml  config_i.yaml
frontend/: API.py  Dockerfile  __init__.py  auth.py  main.py  models.py  preprocessing.py  requirements_web.txt  views.py
notebooks/: annotate_relvance-checkpoint (1).ipynb  bulding_multilingual.ipynb  create_final_dtset_augmented_from_blade.ipynb  examples_presentation.ipynb  wiki_ende.ipynb
tests/: run_rosie.sh  test_rosie_deployment.py
wikipedia/: generate_dtset.py  retriever.py
(+304 files in other folders)
